adjusted the names of the methods and added a documentation